k8s-log/elasticsearch.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
  namespace: logging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
       - image: elasticsearch:6.6.1
         name: elasticsearch
         ports:
          - name: elasticsearch
            containerPort: 9200
         volumeMounts:
         - name: elastic-storage-volume
           mountPath: /usr/share/elasticsearch/data
      volumes: 
        - name: elastic-storage-volume
          persistentVolumeClaim:
            claimName: elastic-claim 
     
#      nodeSelector:
#        beta.kubernetes.io/os: linux
#        kubernetes.io/hostname: forced_machine_hostname
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
  namespace: logging
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    name: elasticsearch
