k8s-log/elasticsearch-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: logging
  annotations:
#    nginx.ingress.kubernetes.io/auth-type: auth-tls
#    nginx.ingress.kubernetes.io/auth-secret: elasticsearch-basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    kubernetes.io/ingress.class: "nginx"
#   kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: elastic.automation-team.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
